fix: modernize BitChute API extraction
- Use the current JSON API for stream metadata and surface geographic
  restrictions.
- Classify HLS and progressive formats correctly and validate supported
  video URLs.
- Replace obsolete webpage fixtures with focused format and link-handler
  coverage.

Co-authored-by: Codex (gpt-5.6-sol) <codex@openai.com>